# SimplePOP3Serv

./: CMakeLists.txt  README.md
Common/: Server.h
MailboxServiceCore/: CMakeLists.txt
MailboxServiceCore/include/: AuthorizationManager.h  ConsumerInfo.h  Enums.h  FileSystemMailStorage.h  Global.h  Info.h  MailboxLock.h  MailboxServiceManager.h  common_headers.h  compact_string.h
MailboxServiceCore/source/: ConsumerInfo.cpp  FileSystemMailStorage.cpp  Info.cpp  MailboxLock.cpp  MailboxServiceManager.cpp
POP3Common/: POP3Command.h  POP3CommandType.h  POP3Status.h
POP3Server/: CMakeLists.txt
POP3Server/include/: POP3Server.h  POP3Session.h
POP3Server/source/: POP3Session.cpp  Server.cpp  main.cpp
POP3ServiceCore/: CMakeLists.txt
POP3ServiceCore/include/: AuthorizationManager.h  Enums.h  FileSystemMailStorage.h  Info.h  MailStorage.h  Mailbox.h  MailboxLock.h  MailboxServiceManager.h  Settings.h  StorageDescription.h  UserManager.h
POP3ServiceCore/source/: FileSystemMailStorage.cpp  Info.cpp  Mailbox.cpp  MailboxLock.cpp  MailboxServiceManager.cpp  Settings.cpp
